src/parser.output
Terminais não utilizados na gramática

   "modal operator delimiter (open)"
   "modal operator delimiter (close)"


Estado 52 conflitos: 1 de deslocamento/redução
Estado 53 conflitos: 1 de deslocamento/redução


Gramática

    0 $accept: file $end

    1 file: declarations sets

    2 declarations: %empty
    3             | "set option command" "(" option ")" "." declarations
    4             | error "." declarations

    5 option: "identifier"
    6       | "identifier" "," "number"
    7       | "identifier" "," propositions_list
    8       | "box operator" modal_arg "," axioms
    9       | "box operator" "," axioms
   10       | error

   11 axioms: %empty
   12       | "identifier"
   13       | "identifier" "," axioms

   14 sets: %empty
   15     | "sos" "(" "formulas" ")" "." formulas_sets_tail
   16     | "usable" "(" "formulas" ")" "." formulas_sets_tail
   17     | "sos" "(" "clauses" ")" "." clauses_sets_tail
   18     | "usable" "(" "clauses" ")" "." clauses_sets_tail

   19 formulas_sets_tail: formulas "end of list" "." sets

   20 clauses_sets_tail: clauses "end of list" "." sets

   21 clauses: %empty
   22        | initial_clause "." clauses
   23        | literal_clause "." clauses
   24        | modal_clause "." clauses
   25        | error "." clauses

   26 initial_clause: TSTART "implication" disjunction_literals

   27 literal_clause: TTRUE "implication" disjunction_literals
   28               | disjunction_literals

   29 modal_clause: literal "implication" "box operator" modal_arg literal
   30             | literal "implication" "box operator" literal
   31             | literal "implication" TOBOX modal_arg TCBOX literal
   32             | literal "implication" TOBOX TCBOX literal
   33             | literal "implication" "diamond operator" modal_arg literal
   34             | literal "implication" "diamond operator" literal
   35             | literal "implication" TODIA modal_arg TCDIA literal
   36             | literal "implication" TODIA TCDIA literal

   37 disjunction_literals: %empty
   38                     | literal "disjunction" disjunction_literals
   39                     | literal
   40                     | "(" disjunction_literals ")"

   41 literal: proposition
   42        | "negation" literal

   43 formulas: %empty
   44         | formula "." formulas
   45         | error "." formulas

   46 formula: formula "double implication" formula
   47        | formula "implication" formula
   48        | formula "only if" formula
   49        | formula "disjunction" formula
   50        | formula "conjunction" formula
   51        | "negation" formula
   52        | TOBOX modal_arg TCBOX formula
   53        | "box operator" modal_arg formula
   54        | TOBOX TCBOX formula
   55        | "box operator" formula
   56        | TODIA modal_arg TCDIA formula
   57        | "diamond operator" modal_arg formula
   58        | TODIA TCDIA formula
   59        | "diamond operator" formula
   60        | "(" formula ")"
   61        | proposition

   62 propositions_list: "identifier"
   63                  | "identifier" "," propositions_list

   64 modal_arg: "number"
   65          | "identifier"

   66 proposition: "identifier"
   67            | TSTART
   68            | TTRUE
   69            | "constant"


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256) 4 10 25 45
"double implication" (258) 46
"implication" (259) 26 27 29 30 31 32 33 34 35 36 47
"only if" (260) 48
"disjunction" (261) 38 49
"conjunction" (262) 50
"negation" (263) 42 51
"diamond operator" (264) 33 34 57 59
"box operator" (265) 8 9 29 30 53 55
TOBOX (266) 31 32 52 54
TODIA (267) 35 36 56 58
"modal operator delimiter (open)" (268)
TCBOX (269) 31 32 52 54
TCDIA (270) 35 36 56 58
"modal operator delimiter (close)" (271)
"identifier" (272) 5 6 7 12 13 62 63 65 66
"number" (273) 6 64
TSTART (274) 26 67
TTRUE (275) 27 68
"constant" (276) 69
"set option command" (277) 3
"." (278) 3 4 15 16 17 18 19 20 22 23 24 25 44 45
"," (279) 6 7 8 9 13 63
"clauses" (280) 17 18
"formulas" (281) 15 16
"sos" (282) 15 17
"usable" (283) 16 18
"end of list" (284) 19 20
"(" (285) 3 15 16 17 18 40 60
")" (286) 3 15 16 17 18 40 60


Não-terminais com as regras onde eles aparecem

$accept (32)
    à esquerda: 0
file (33)
    à esquerda: 1, à direita: 0
declarations (34)
    à esquerda: 2 3 4, à direita: 1 3 4
option (35)
    à esquerda: 5 6 7 8 9 10, à direita: 3
axioms (36)
    à esquerda: 11 12 13, à direita: 8 9 13
sets (37)
    à esquerda: 14 15 16 17 18, à direita: 1 19 20
formulas_sets_tail (38)
    à esquerda: 19, à direita: 15 16
clauses_sets_tail (39)
    à esquerda: 20, à direita: 17 18
clauses (40)
    à esquerda: 21 22 23 24 25, à direita: 20 22 23 24 25
initial_clause (41)
    à esquerda: 26, à direita: 22
literal_clause (42)
    à esquerda: 27 28, à direita: 23
modal_clause (43)
    à esquerda: 29 30 31 32 33 34 35 36, à direita: 24
disjunction_literals (44)
    à esquerda: 37 38 39 40, à direita: 26 27 28 38 40
literal (45)
    à esquerda: 41 42, à direita: 29 30 31 32 33 34 35 36 38 39 42
formulas (46)
    à esquerda: 43 44 45, à direita: 19 44 45
formula (47)
    à esquerda: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61, à direita:
    44 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
propositions_list (48)
    à esquerda: 62 63, à direita: 7 63
modal_arg (49)
    à esquerda: 64 65, à direita: 8 29 31 33 35 52 53 56 57
proposition (50)
    à esquerda: 66 67 68 69, à direita: 41 61


State 0

    0 $accept: . file $end

    error                 deslocar, e ir ao estado 1
    "set option command"  deslocar, e ir ao estado 2

    $end      reduzir usando a regra 2 (declarations)
    "sos"     reduzir usando a regra 2 (declarations)
    "usable"  reduzir usando a regra 2 (declarations)

    file          ir ao estado 3
    declarations  ir ao estado 4


State 1

    4 declarations: error . "." declarations

    "."  deslocar, e ir ao estado 5


State 2

    3 declarations: "set option command" . "(" option ")" "." declarations

    "("  deslocar, e ir ao estado 6


State 3

    0 $accept: file . $end

    $end  deslocar, e ir ao estado 7


State 4

    1 file: declarations . sets

    "sos"     deslocar, e ir ao estado 8
    "usable"  deslocar, e ir ao estado 9

    $padrão  reduzir usando a regra 14 (sets)

    sets  ir ao estado 10


State 5

    4 declarations: error "." . declarations

    error                 deslocar, e ir ao estado 1
    "set option command"  deslocar, e ir ao estado 2

    $end      reduzir usando a regra 2 (declarations)
    "sos"     reduzir usando a regra 2 (declarations)
    "usable"  reduzir usando a regra 2 (declarations)

    declarations  ir ao estado 11


State 6

    3 declarations: "set option command" "(" . option ")" "." declarations

    error           deslocar, e ir ao estado 12
    "box operator"  deslocar, e ir ao estado 13
    "identifier"    deslocar, e ir ao estado 14

    option  ir ao estado 15


State 7

    0 $accept: file $end .

    $padrão  aceitar


State 8

   15 sets: "sos" . "(" "formulas" ")" "." formulas_sets_tail
   17     | "sos" . "(" "clauses" ")" "." clauses_sets_tail

    "("  deslocar, e ir ao estado 16


State 9

   16 sets: "usable" . "(" "formulas" ")" "." formulas_sets_tail
   18     | "usable" . "(" "clauses" ")" "." clauses_sets_tail

    "("  deslocar, e ir ao estado 17


State 10

    1 file: declarations sets .

    $padrão  reduzir usando a regra 1 (file)


State 11

    4 declarations: error "." declarations .

    $padrão  reduzir usando a regra 4 (declarations)


State 12

   10 option: error .

    $padrão  reduzir usando a regra 10 (option)


State 13

    8 option: "box operator" . modal_arg "," axioms
    9       | "box operator" . "," axioms

    "identifier"  deslocar, e ir ao estado 18
    "number"      deslocar, e ir ao estado 19
    ","           deslocar, e ir ao estado 20

    modal_arg  ir ao estado 21


State 14

    5 option: "identifier" .
    6       | "identifier" . "," "number"
    7       | "identifier" . "," propositions_list

    ","  deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 5 (option)


State 15

    3 declarations: "set option command" "(" option . ")" "." declarations

    ")"  deslocar, e ir ao estado 23


State 16

   15 sets: "sos" "(" . "formulas" ")" "." formulas_sets_tail
   17     | "sos" "(" . "clauses" ")" "." clauses_sets_tail

    "clauses"   deslocar, e ir ao estado 24
    "formulas"  deslocar, e ir ao estado 25


State 17

   16 sets: "usable" "(" . "formulas" ")" "." formulas_sets_tail
   18     | "usable" "(" . "clauses" ")" "." clauses_sets_tail

    "clauses"   deslocar, e ir ao estado 26
    "formulas"  deslocar, e ir ao estado 27


State 18

   65 modal_arg: "identifier" .

    $padrão  reduzir usando a regra 65 (modal_arg)


State 19

   64 modal_arg: "number" .

    $padrão  reduzir usando a regra 64 (modal_arg)


State 20

    9 option: "box operator" "," . axioms

    "identifier"  deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 11 (axioms)

    axioms  ir ao estado 29


State 21

    8 option: "box operator" modal_arg . "," axioms

    ","  deslocar, e ir ao estado 30


State 22

    6 option: "identifier" "," . "number"
    7       | "identifier" "," . propositions_list

    "identifier"  deslocar, e ir ao estado 31
    "number"      deslocar, e ir ao estado 32

    propositions_list  ir ao estado 33


State 23

    3 declarations: "set option command" "(" option ")" . "." declarations

    "."  deslocar, e ir ao estado 34


State 24

   17 sets: "sos" "(" "clauses" . ")" "." clauses_sets_tail

    ")"  deslocar, e ir ao estado 35


State 25

   15 sets: "sos" "(" "formulas" . ")" "." formulas_sets_tail

    ")"  deslocar, e ir ao estado 36


State 26

   18 sets: "usable" "(" "clauses" . ")" "." clauses_sets_tail

    ")"  deslocar, e ir ao estado 37


State 27

   16 sets: "usable" "(" "formulas" . ")" "." formulas_sets_tail

    ")"  deslocar, e ir ao estado 38


State 28

   12 axioms: "identifier" .
   13       | "identifier" . "," axioms

    ","  deslocar, e ir ao estado 39

    $padrão  reduzir usando a regra 12 (axioms)


State 29

    9 option: "box operator" "," axioms .

    $padrão  reduzir usando a regra 9 (option)


State 30

    8 option: "box operator" modal_arg "," . axioms

    "identifier"  deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 11 (axioms)

    axioms  ir ao estado 40


State 31

   62 propositions_list: "identifier" .
   63                  | "identifier" . "," propositions_list

    ","  deslocar, e ir ao estado 41

    $padrão  reduzir usando a regra 62 (propositions_list)


State 32

    6 option: "identifier" "," "number" .

    $padrão  reduzir usando a regra 6 (option)


State 33

    7 option: "identifier" "," propositions_list .

    $padrão  reduzir usando a regra 7 (option)


State 34

    3 declarations: "set option command" "(" option ")" "." . declarations

    error                 deslocar, e ir ao estado 1
    "set option command"  deslocar, e ir ao estado 2

    $end      reduzir usando a regra 2 (declarations)
    "sos"     reduzir usando a regra 2 (declarations)
    "usable"  reduzir usando a regra 2 (declarations)

    declarations  ir ao estado 42


State 35

   17 sets: "sos" "(" "clauses" ")" . "." clauses_sets_tail

    "."  deslocar, e ir ao estado 43


State 36

   15 sets: "sos" "(" "formulas" ")" . "." formulas_sets_tail

    "."  deslocar, e ir ao estado 44


State 37

   18 sets: "usable" "(" "clauses" ")" . "." clauses_sets_tail

    "."  deslocar, e ir ao estado 45


State 38

   16 sets: "usable" "(" "formulas" ")" . "." formulas_sets_tail

    "."  deslocar, e ir ao estado 46


State 39

   13 axioms: "identifier" "," . axioms

    "identifier"  deslocar, e ir ao estado 28

    $padrão  reduzir usando a regra 11 (axioms)

    axioms  ir ao estado 47


State 40

    8 option: "box operator" modal_arg "," axioms .

    $padrão  reduzir usando a regra 8 (option)


State 41

   63 propositions_list: "identifier" "," . propositions_list

    "identifier"  deslocar, e ir ao estado 31

    propositions_list  ir ao estado 48


State 42

    3 declarations: "set option command" "(" option ")" "." declarations .

    $padrão  reduzir usando a regra 3 (declarations)


State 43

   17 sets: "sos" "(" "clauses" ")" "." . clauses_sets_tail

    error         deslocar, e ir ao estado 49
    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 52
    TTRUE         deslocar, e ir ao estado 53
    "constant"    deslocar, e ir ao estado 54
    "("           deslocar, e ir ao estado 55

    "."            reduzir usando a regra 37 (disjunction_literals)
    "end of list"  reduzir usando a regra 21 (clauses)

    clauses_sets_tail     ir ao estado 56
    clauses               ir ao estado 57
    initial_clause        ir ao estado 58
    literal_clause        ir ao estado 59
    modal_clause          ir ao estado 60
    disjunction_literals  ir ao estado 61
    literal               ir ao estado 62
    proposition           ir ao estado 63


State 44

   15 sets: "sos" "(" "formulas" ")" "." . formulas_sets_tail

    error               deslocar, e ir ao estado 64
    "negation"          deslocar, e ir ao estado 65
    "diamond operator"  deslocar, e ir ao estado 66
    "box operator"      deslocar, e ir ao estado 67
    TOBOX               deslocar, e ir ao estado 68
    TODIA               deslocar, e ir ao estado 69
    "identifier"        deslocar, e ir ao estado 51
    TSTART              deslocar, e ir ao estado 70
    TTRUE               deslocar, e ir ao estado 71
    "constant"          deslocar, e ir ao estado 54
    "("                 deslocar, e ir ao estado 72

    "end of list"  reduzir usando a regra 43 (formulas)

    formulas_sets_tail  ir ao estado 73
    formulas            ir ao estado 74
    formula             ir ao estado 75
    proposition         ir ao estado 76


State 45

   18 sets: "usable" "(" "clauses" ")" "." . clauses_sets_tail

    error         deslocar, e ir ao estado 49
    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 52
    TTRUE         deslocar, e ir ao estado 53
    "constant"    deslocar, e ir ao estado 54
    "("           deslocar, e ir ao estado 55

    "."            reduzir usando a regra 37 (disjunction_literals)
    "end of list"  reduzir usando a regra 21 (clauses)

    clauses_sets_tail     ir ao estado 77
    clauses               ir ao estado 57
    initial_clause        ir ao estado 58
    literal_clause        ir ao estado 59
    modal_clause          ir ao estado 60
    disjunction_literals  ir ao estado 61
    literal               ir ao estado 62
    proposition           ir ao estado 63


State 46

   16 sets: "usable" "(" "formulas" ")" "." . formulas_sets_tail

    error               deslocar, e ir ao estado 64
    "negation"          deslocar, e ir ao estado 65
    "diamond operator"  deslocar, e ir ao estado 66
    "box operator"      deslocar, e ir ao estado 67
    TOBOX               deslocar, e ir ao estado 68
    TODIA               deslocar, e ir ao estado 69
    "identifier"        deslocar, e ir ao estado 51
    TSTART              deslocar, e ir ao estado 70
    TTRUE               deslocar, e ir ao estado 71
    "constant"          deslocar, e ir ao estado 54
    "("                 deslocar, e ir ao estado 72

    "end of list"  reduzir usando a regra 43 (formulas)

    formulas_sets_tail  ir ao estado 78
    formulas            ir ao estado 74
    formula             ir ao estado 75
    proposition         ir ao estado 76


State 47

   13 axioms: "identifier" "," axioms .

    $padrão  reduzir usando a regra 13 (axioms)


State 48

   63 propositions_list: "identifier" "," propositions_list .

    $padrão  reduzir usando a regra 63 (propositions_list)


State 49

   25 clauses: error . "." clauses

    "."  deslocar, e ir ao estado 79


State 50

   42 literal: "negation" . literal

    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 70
    TTRUE         deslocar, e ir ao estado 71
    "constant"    deslocar, e ir ao estado 54

    literal      ir ao estado 80
    proposition  ir ao estado 63


State 51

   66 proposition: "identifier" .

    $padrão  reduzir usando a regra 66 (proposition)


State 52

   26 initial_clause: TSTART . "implication" disjunction_literals
   67 proposition: TSTART .

    "implication"  deslocar, e ir ao estado 81

    "implication"  [reduzir usando a regra 67 (proposition)]
    $padrão       reduzir usando a regra 67 (proposition)


State 53

   27 literal_clause: TTRUE . "implication" disjunction_literals
   68 proposition: TTRUE .

    "implication"  deslocar, e ir ao estado 82

    "implication"  [reduzir usando a regra 68 (proposition)]
    $padrão       reduzir usando a regra 68 (proposition)


State 54

   69 proposition: "constant" .

    $padrão  reduzir usando a regra 69 (proposition)


State 55

   40 disjunction_literals: "(" . disjunction_literals ")"

    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 70
    TTRUE         deslocar, e ir ao estado 71
    "constant"    deslocar, e ir ao estado 54
    "("           deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 37 (disjunction_literals)

    disjunction_literals  ir ao estado 83
    literal               ir ao estado 84
    proposition           ir ao estado 63


State 56

   17 sets: "sos" "(" "clauses" ")" "." clauses_sets_tail .

    $padrão  reduzir usando a regra 17 (sets)


State 57

   20 clauses_sets_tail: clauses . "end of list" "." sets

    "end of list"  deslocar, e ir ao estado 85


State 58

   22 clauses: initial_clause . "." clauses

    "."  deslocar, e ir ao estado 86


State 59

   23 clauses: literal_clause . "." clauses

    "."  deslocar, e ir ao estado 87


State 60

   24 clauses: modal_clause . "." clauses

    "."  deslocar, e ir ao estado 88


State 61

   28 literal_clause: disjunction_literals .

    $padrão  reduzir usando a regra 28 (literal_clause)


State 62

   29 modal_clause: literal . "implication" "box operator" modal_arg literal
   30             | literal . "implication" "box operator" literal
   31             | literal . "implication" TOBOX modal_arg TCBOX literal
   32             | literal . "implication" TOBOX TCBOX literal
   33             | literal . "implication" "diamond operator" modal_arg literal
   34             | literal . "implication" "diamond operator" literal
   35             | literal . "implication" TODIA modal_arg TCDIA literal
   36             | literal . "implication" TODIA TCDIA literal
   38 disjunction_literals: literal . "disjunction" disjunction_literals
   39                     | literal .

    "implication"  deslocar, e ir ao estado 89
    "disjunction"  deslocar, e ir ao estado 90

    $padrão  reduzir usando a regra 39 (disjunction_literals)


State 63

   41 literal: proposition .

    $padrão  reduzir usando a regra 41 (literal)


State 64

   45 formulas: error . "." formulas

    "."  deslocar, e ir ao estado 91


State 65

   51 formula: "negation" . formula

    "negation"          deslocar, e ir ao estado 65
    "diamond operator"  deslocar, e ir ao estado 66
    "box operator"      deslocar, e ir ao estado 67
    TOBOX               deslocar, e ir ao estado 68
    TODIA               deslocar, e ir ao estado 69
    "identifier"        deslocar, e ir ao estado 51
    TSTART              deslocar, e ir ao estado 70
    TTRUE               deslocar, e ir ao estado 71
    "constant"          deslocar, e ir ao estado 54
    "("                 deslocar, e ir ao estado 72

    formula      ir ao estado 92
    proposition  ir ao estado 76


State 66

   57 formula: "diamond operator" . modal_arg formula
   59        | "diamond operator" . formula

    "negation"          deslocar, e ir ao estado 65
    "diamond operator"  deslocar, e ir ao estado 66
    "box operator"      deslocar, e ir ao estado 67
    TOBOX               deslocar, e ir ao estado 68
    TODIA               deslocar, e ir ao estado 69
    "identifier"        deslocar, e ir ao estado 93
    "number"            deslocar, e ir ao estado 19
    TSTART              deslocar, e ir ao estado 70
    TTRUE               deslocar, e ir ao estado 71
    "constant"          deslocar, e ir ao estado 54
    "("                 deslocar, e ir ao estado 72

    formula      ir ao estado 94
    modal_arg    ir ao estado 95
    proposition  ir ao estado 76


State 67

   53 formula: "box operator" . modal_arg formula
   55        | "box operator" . formula

    "negation"          deslocar, e ir ao estado 65
    "diamond operator"  deslocar, e ir ao estado 66
    "box operator"      deslocar, e ir ao estado 67
    TOBOX               deslocar, e ir ao estado 68
    TODIA               deslocar, e ir ao estado 69
    "identifier"        deslocar, e ir ao estado 93
    "number"            deslocar, e ir ao estado 19
    TSTART              deslocar, e ir ao estado 70
    TTRUE               deslocar, e ir ao estado 71
    "constant"          deslocar, e ir ao estado 54
    "("                 deslocar, e ir ao estado 72

    formula      ir ao estado 96
    modal_arg    ir ao estado 97
    proposition  ir ao estado 76


State 68

   52 formula: TOBOX . modal_arg TCBOX formula
   54        | TOBOX . TCBOX formula

    TCBOX         deslocar, e ir ao estado 98
    "identifier"  deslocar, e ir ao estado 18
    "number"      deslocar, e ir ao estado 19

    modal_arg  ir ao estado 99


State 69

   56 formula: TODIA . modal_arg TCDIA formula
   58        | TODIA . TCDIA formula

    TCDIA         deslocar, e ir ao estado 100
    "identifier"  deslocar, e ir ao estado 18
    "number"      deslocar, e ir ao estado 19

    modal_arg  ir ao estado 101


State 70

   67 proposition: TSTART .

    $padrão  reduzir usando a regra 67 (proposition)


State 71

   68 proposition: TTRUE .

    $padrão  reduzir usando a regra 68 (proposition)


State 72

   60 formula: "(" . formula ")"

    "negation"          deslocar, e ir ao estado 65
    "diamond operator"  deslocar, e ir ao estado 66
    "box operator"      deslocar, e ir ao estado 67
    TOBOX               deslocar, e ir ao estado 68
    TODIA               deslocar, e ir ao estado 69
    "identifier"        deslocar, e ir ao estado 51
    TSTART              deslocar, e ir ao estado 70
    TTRUE               deslocar, e ir ao estado 71
    "constant"          deslocar, e ir ao estado 54
    "("                 deslocar, e ir ao estado 72

    formula      ir ao estado 102
    proposition  ir ao estado 76


State 73

   15 sets: "sos" "(" "formulas" ")" "." formulas_sets_tail .

    $padrão  reduzir usando a regra 15 (sets)


State 74

   19 formulas_sets_tail: formulas . "end of list" "." sets

    "end of list"  deslocar, e ir ao estado 103


State 75

   44 formulas: formula . "." formulas
   46 formula: formula . "double implication" formula
   47        | formula . "implication" formula
   48        | formula . "only if" formula
   49        | formula . "disjunction" formula
   50        | formula . "conjunction" formula

    "double implication"  deslocar, e ir ao estado 104
    "implication"         deslocar, e ir ao estado 105
    "only if"             deslocar, e ir ao estado 106
    "disjunction"         deslocar, e ir ao estado 107
    "conjunction"         deslocar, e ir ao estado 108
    "."                   deslocar, e ir ao estado 109


State 76

   61 formula: proposition .

    $padrão  reduzir usando a regra 61 (formula)


State 77

   18 sets: "usable" "(" "clauses" ")" "." clauses_sets_tail .

    $padrão  reduzir usando a regra 18 (sets)


State 78

   16 sets: "usable" "(" "formulas" ")" "." formulas_sets_tail .

    $padrão  reduzir usando a regra 16 (sets)


State 79

   25 clauses: error "." . clauses

    error         deslocar, e ir ao estado 49
    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 52
    TTRUE         deslocar, e ir ao estado 53
    "constant"    deslocar, e ir ao estado 54
    "("           deslocar, e ir ao estado 55

    "."            reduzir usando a regra 37 (disjunction_literals)
    "end of list"  reduzir usando a regra 21 (clauses)

    clauses               ir ao estado 110
    initial_clause        ir ao estado 58
    literal_clause        ir ao estado 59
    modal_clause          ir ao estado 60
    disjunction_literals  ir ao estado 61
    literal               ir ao estado 62
    proposition           ir ao estado 63


State 80

   42 literal: "negation" literal .

    $padrão  reduzir usando a regra 42 (literal)


State 81

   26 initial_clause: TSTART "implication" . disjunction_literals

    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 70
    TTRUE         deslocar, e ir ao estado 71
    "constant"    deslocar, e ir ao estado 54
    "("           deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 37 (disjunction_literals)

    disjunction_literals  ir ao estado 111
    literal               ir ao estado 84
    proposition           ir ao estado 63


State 82

   27 literal_clause: TTRUE "implication" . disjunction_literals

    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 70
    TTRUE         deslocar, e ir ao estado 71
    "constant"    deslocar, e ir ao estado 54
    "("           deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 37 (disjunction_literals)

    disjunction_literals  ir ao estado 112
    literal               ir ao estado 84
    proposition           ir ao estado 63


State 83

   40 disjunction_literals: "(" disjunction_literals . ")"

    ")"  deslocar, e ir ao estado 113


State 84

   38 disjunction_literals: literal . "disjunction" disjunction_literals
   39                     | literal .

    "disjunction"  deslocar, e ir ao estado 90

    $padrão  reduzir usando a regra 39 (disjunction_literals)


State 85

   20 clauses_sets_tail: clauses "end of list" . "." sets

    "."  deslocar, e ir ao estado 114


State 86

   22 clauses: initial_clause "." . clauses

    error         deslocar, e ir ao estado 49
    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 52
    TTRUE         deslocar, e ir ao estado 53
    "constant"    deslocar, e ir ao estado 54
    "("           deslocar, e ir ao estado 55

    "."            reduzir usando a regra 37 (disjunction_literals)
    "end of list"  reduzir usando a regra 21 (clauses)

    clauses               ir ao estado 115
    initial_clause        ir ao estado 58
    literal_clause        ir ao estado 59
    modal_clause          ir ao estado 60
    disjunction_literals  ir ao estado 61
    literal               ir ao estado 62
    proposition           ir ao estado 63


State 87

   23 clauses: literal_clause "." . clauses

    error         deslocar, e ir ao estado 49
    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 52
    TTRUE         deslocar, e ir ao estado 53
    "constant"    deslocar, e ir ao estado 54
    "("           deslocar, e ir ao estado 55

    "."            reduzir usando a regra 37 (disjunction_literals)
    "end of list"  reduzir usando a regra 21 (clauses)

    clauses               ir ao estado 116
    initial_clause        ir ao estado 58
    literal_clause        ir ao estado 59
    modal_clause          ir ao estado 60
    disjunction_literals  ir ao estado 61
    literal               ir ao estado 62
    proposition           ir ao estado 63


State 88

   24 clauses: modal_clause "." . clauses

    error         deslocar, e ir ao estado 49
    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 52
    TTRUE         deslocar, e ir ao estado 53
    "constant"    deslocar, e ir ao estado 54
    "("           deslocar, e ir ao estado 55

    "."            reduzir usando a regra 37 (disjunction_literals)
    "end of list"  reduzir usando a regra 21 (clauses)

    clauses               ir ao estado 117
    initial_clause        ir ao estado 58
    literal_clause        ir ao estado 59
    modal_clause          ir ao estado 60
    disjunction_literals  ir ao estado 61
    literal               ir ao estado 62
    proposition           ir ao estado 63


State 89

   29 modal_clause: literal "implication" . "box operator" modal_arg literal
   30             | literal "implication" . "box operator" literal
   31             | literal "implication" . TOBOX modal_arg TCBOX literal
   32             | literal "implication" . TOBOX TCBOX literal
   33             | literal "implication" . "diamond operator" modal_arg literal
   34             | literal "implication" . "diamond operator" literal
   35             | literal "implication" . TODIA modal_arg TCDIA literal
   36             | literal "implication" . TODIA TCDIA literal

    "diamond operator"  deslocar, e ir ao estado 118
    "box operator"      deslocar, e ir ao estado 119
    TOBOX               deslocar, e ir ao estado 120
    TODIA               deslocar, e ir ao estado 121


State 90

   38 disjunction_literals: literal "disjunction" . disjunction_literals

    "negation"    deslocar, e ir ao estado 50
    "identifier"  deslocar, e ir ao estado 51
    TSTART        deslocar, e ir ao estado 70
    TTRUE         deslocar, e ir ao estado 71
    "constant"    deslocar, e ir ao estado 54
    "("           deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 37 (disjunction_literals)

    disjunction_literals  ir ao estado 122
    literal               ir ao estado 84
    proposition           ir ao estado 63


State 91

   45 formulas: error "." . formulas

    error               deslocar, e ir ao estado 64
    "negation"          deslocar, e ir ao estado 65
    "diamond operator"  deslocar, e ir ao estado 66
    "box operator"      deslocar, e ir ao estado 67
    TOBOX               deslocar, e ir ao estado 68
    TODIA               deslocar, e ir ao estado 69
    "identifier"        deslocar, e ir ao estado 51
    TSTART              deslocar, e ir ao estado 70
    TTRUE               deslocar, e ir ao estado 71
    "constant"          deslocar, e ir ao estado 54
    "("                 deslocar, e ir ao estado 72

    "end of list"  reduzir usando a regra 43 (formulas)

    formulas     ir ao estado 123
    formula      ir ao estado 75
    proposition  ir ao estado 76


State 92

   46 formula: formula . "double implication" formula
   47        | formula . "implication" formula
   48        | formula . "only if" formula
   49        | formula . "disjunction" formula
   50        | formula . "conjunction" formula
   51        | "negation" formula .

    $padrão  reduzir usando a regra 51 (formula)


State 93

   65 modal_arg: "identifier" .
   66 proposition: "identifier" .

    "double implication"  reduzir usando a regra 66 (proposition)
    "implication"         reduzir usando a regra 66 (proposition)
    "only if"             reduzir usando a regra 66 (proposition)
    "disjunction"         reduzir usando a regra 66 (proposition)
    "conjunction"         reduzir usando a regra 66 (proposition)
    "."                   reduzir usando a regra 66 (proposition)
    ")"                   reduzir usando a regra 66 (proposition)
    $padrão              reduzir usando a regra 65 (modal_arg)


State 94

   46 formula: formula . "double implication" formula
   47        | formula . "implication" formula
   48        | formula . "only if" formula
   49        | formula . "disjunction" formula
   50        | formula . "conjunction" formula
   59        | "diamond operator" formula .

    $padrão  reduzir usando a regra 59 (formula)


State 95

   57 formula: "diamond operator" modal_arg . formula

    "negation"          deslocar, e ir ao estado 65
    "diamond operator"  deslocar, e ir ao estado 66
    "box operator"      deslocar, e ir ao estado 67
    TOBOX               deslocar, e ir ao estado 68
    TODIA               deslocar, e ir ao estado 69
    "identifier"        deslocar, e ir ao estado 51
    TSTART              deslocar, e ir ao estado 70
    TTRUE               deslocar, e ir ao estado 71
    "constant"          deslocar, e ir ao estado 54
    "("                 deslocar, e ir ao estado 72

    formula      ir ao estado 124
    proposition  ir ao estado 76


State 96

   46 formula: formula . "double implication" formula
   47        | formula . "implication" formula
   48        | formula . "only if" formula
   49        | formula . "disjunction" formula
   50        | formula . "conjunction" formula
   55        | "box operator" formula .

    $padrão  reduzir usando a regra 55 (formula)


State 97

   53 formula: "box operator" modal_arg . formula

    "negation"          deslocar, e ir ao estado 65
    "diamond operator"  deslocar, e ir ao estado 66
    "box operator"      deslocar, e ir ao estado 67
    TOBOX               deslocar, e ir ao estado 68
    TODIA               deslocar, e ir ao estado 69
    "identifier"        deslocar, e ir ao estado 51
    TSTART              deslocar, e ir ao estado 70
    TTRUE               deslocar, e ir ao estado 71
    "constant"          deslocar, e ir ao estado 54
    "("                 deslocar, e ir ao estado 72

    formula      ir ao estado 125
    proposition  ir ao estado 76


State 98

   54 formula: TOBOX TCBOX . formula

    "negation"          deslocar, e ir ao estado 65
    "diamond operator"  deslocar, e ir ao estado 66
    "box operator"      deslocar, e ir ao estado 67
    TOBOX               deslocar, e ir ao estado 68
    TODIA               deslocar, e ir ao estado 69
    "identifier"        deslocar, e ir ao estado 51
    TSTART              deslocar, e ir ao estado 70
    TTRUE               deslocar, e ir ao estado 71
    "constant"          deslocar, e ir ao estado 54
    "("                 deslocar, e ir ao estado 72

    formula      ir ao estado 126
    proposition  ir ao estado 76


State 99

   52 formula: TOBOX modal_arg . TCBOX formula

    TCBOX  deslocar, e ir ao estado 127


State 100

   58 formula: TODIA TCDIA . formula
